# reswhis

./: .gitattributes  .gitignore  README.md  client.html  client.py  config.py  hello.py  main.py  pyproject.toml  run.bat  run.sh  silero_vad_iterator.py  whisper_online.py
.github/workflows/: ruff.yml  uv.yml
clients/: web_client.html
