[project]
name = "reswhis"
version = "0.1.0"
description = "Yet another remote streaming Whisper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "faster-whisper>=1.1.1",
    "librosa>=0.10.2.post1",
    "openai>=1.63.2",
    "pydantic-settings>=2.7.1",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "whisper-timestamped>=1.15.8",
]
